src/variorum/variorum_topology.h

 

int variorum_get_num_sockets(void);
int variorum_get_num_cores(void);
int variorum_get_num_threads(void);